--- a/thesis.tex
+++ b/thesis.tex
@@ -41,7 +41,7 @@
 \sec Adding data
 \input adding-data
 
-
+%\sec shape parameter
 %\sec stability and trade-off principle (Fasshauer)
 %\sec Increment of the norm
 %\sec Gibbs and Runge phenomena
@@ -59,7 +59,7 @@
 % BIBLIOGRAPHY
 \let\_mtext\ignoreit
 \nonum\chap Bibliography
-%\def\_opwarning#1{}
+\def\_opwarning#1{}
 \usebib/s (iso690) biblist
 
 
