--- a/error-estimates.tex
+++ b/error-estimates.tex
@@ -113,7 +113,7 @@ $$
  
 
 
-The power function therefore is a function which depends only on the kernel and the data sites; it has value zero at the data sites and elsewhere is strictly positive and bounded above by the function~$x\mapsto\sqrt{Φ(x,x)}$.  If the kernel~$Φ$ belongs to~$\Cal C^k(\Omega\times\Omega)$, then also $P_X$ belongs to~$\Cal C^k(\Omega)$ (in particular, $P_X$ is continuous if $Φ$~is continuous); if the kernel is translational invariant (for instance, a radial kernel), then $P_X$ is bounded above by a constant, because  in this case $Φ(x,x)$ does not depend on~$x$.
+The power function therefore is a function which depends only on the kernel and the data sites; it has value zero at the data sites and elsewhere is strictly positive and bounded above by the function~$x\mapsto\sqrt{Φ(x,x)}$.  If the kernel~$Φ$ is continuous, then also $P_X$ is continuous; if the kernel is translational invariant (for instance, a radial kernel), then $P_X$ is bounded above by a constant, because  in this case $Φ(x,x)$ does not depend on~$x$.
 
 
 
