Removed ambiguous notation

--- a/error-estimates.tex
+++ b/error-estimates.tex
@@ -20,7 +20,7 @@ u_h\coloneq \sum_{k = 1}^N c^{(h)}_k\Phi(\cdot, x_k)\mathbox. \eqmark[card]
 $$
 These basis functions, called {\em cardinal} functions, have the property that
 $$
-u_h(x_j) = \delta_{h,j} = \cases{$1$,& if $j = h$ \cr
+u_h(x_j) = \cases{$1$,& if $j = h$ \cr
 					             $0$,& if $j \neq h$,}
 $$
 since by definition the value of~$u_h$ at each point~$x_j$ is obtained by multiplying the $j$-th~row of~$\Bm A$ by the $h$-th~column of its inverse~$\Bm C$.  In the cardinal basis~$\Cal U$  the interpolant~$s_{X,f}$ of a function~$f\in\Cal N_Φ$ on the set of locations~$X$  is expressed in the simple  {\em Lagrangian form}
