--- a/adding-data.tex
+++ b/adding-data.tex
@@ -79,11 +79,11 @@ $$
 &= \Bm \beta^T\! \Bm A \.\Bm \beta + 2 \gamma\. \Bm b(x)^T \Bm \beta + \gamma^2 Φ(x,x).
 }
 $$
-Then, the substitution~(\lower.6ex\hbox{*}) for~$\Bm \beta$ allows us express the square of the norm of~$s_{X\cup\{x\}, f}$ as
+Then, the substitution~(\lower.6ex\hbox{*}) for~$\Bm \beta$ allows us to express the square of the norm of~$s_{X\cup\{x\}, f}$ as
 $$
 \eqalign{
-\norm{s_{X\cup\{x\}, f}}_Φ^2 &= (\Bm \alpha - \gamma\Bm u(x))^T\! \Bm A\, (\Bm \alpha - \gamma \Bm u(x)) + 2\gamma\. \Bm b^T(x) (\Bm \alpha - \gamma \Bm u(x)) + \gamma^2 Φ(x,x) \cr
-&=  \Bm \alpha^T\!\Bm A\.\Bm \alpha +\gamma^2 \bigl[Φ(x,x) - 2\Bm b^T(x)\Bm u(x) + \Bm u(x)^T\!\Bm A\. \Bm u(x) \bigr] \cr
+\norm{s_{X\cup\{x\}, f}}_Φ^2 &= (\Bm \alpha - \gamma\Bm u(x))^T\Bm A\, (\Bm \alpha - \gamma \Bm u(x)) + 2\gamma\. \Bm b(x)^T\! (\Bm \alpha - \gamma \Bm u(x)) + \gamma^2 Φ(x,x) \cr
+&=  \Bm \alpha^T\!\Bm A\.\Bm \alpha +\gamma^2 \bigl[Φ(x,x) - 2\Bm b(x)^T\Bm u(x) + \Bm u(x)^T\!\Bm A\. \Bm u(x) \bigr] \cr
 &= \norm{s_{X,f}}_Φ^2 + \gamma^2 P^2_X(x),
 }\eqno(\lower.6ex\hbox{*}\lower.6ex\hbox{*})
 $$
