--- a/optimality.tex
+++ b/optimality.tex
@@ -27,13 +27,13 @@ With respect to the subspace~$\Cal S_{Φ,\. X}$ of the native space~$\Cal N_Φ$,
 $$
 f = s_{X,f} + (\.f-s_{X, f}).
 $$
-The orthogonality of the two components implies the following {\em Pythagorean identity},
+The orthogonality of the two components implies the {\em Pythagorean identity}, which says that
 $$
 \norm{\.f}_Φ^2=\norm{s_{X,f}}_Φ^2+\norm{f-s_{X, f}}^2. \eqmark[pythag]
 $$ 
 
 
-Up to now we have considered as interpolant of the pair of data~$(X,f(X))$ only the  unique function~$s_{X,f}$ that belongs to~$\Cal S_{Φ,\. X}=\langle\,Φ(\cdot,x_j)\, :\, x_j\in X\,\rangle$.  Nonetheless, in the rest of~$\Cal N_Φ$ there could be also other functions which agree with the values~$f(X)$ at the data sites~$X$---one trivial example is $f$ itself.  We are about to see a property satisfied by~$s_{X,f}$,  which makes it special among all the interpolants.
+Up to now we have considered as interpolant of the pair of data~$(X,f(X))$ only the  unique function~$s_{X,f}$ that belongs to~$\Cal S_{Φ,\. X}=\langle\,Φ(\cdot,x_j)\, :\, x_j\in X\,\rangle$.  Nonetheless, in the rest of~$\Cal N_Φ$ there are also other functions which agree with the values~$f(X)$ at the data sites~$X$---one trivial example is $f$ itself.  We are about to see a property satisfied by~$s_{X,f}$,  which makes it special among all the interpolants.
 
 
 We start by giving a name to the subspace of~$\Cal N_Φ$ made of all functions  that interpolates the pair of data~$(X, f(X))$, that is
