--- a/optimality.tex
+++ b/optimality.tex
@@ -23,9 +23,9 @@ $$
 \norm{\.f-s_{X,f}}_Φ \leq \norm{\.f-h}_Φ\mathbox{,\quad for all $h\in\Cal S_{Φ,\. X}$.}\eqmark[mindist]
 $$
 
-With respect to the subspace~$\Cal S_{Φ,\. X}$ of the native space~$\Cal N_Φ$, any function $f\in\Cal N_Φ$ is decomposed into two orthogonal parts: its projection~$s_{X,f}\in\Cal S_{X,f}$ and the interpolation error~$\epsilon_x(\.f) = f-s_{X, f}\in\Cal S_{X,f}^\perp$.  In fact,
+With respect to the subspace~$\Cal S_{Φ,\. X}$ of the native space~$\Cal N_Φ$, any function $f\in\Cal N_Φ$ is decomposed into two orthogonal parts: its projection~$s_{X,f}\in\Cal S_{X,f}$ and the interpolation error~$\epsilon_x(f) = f-s_{X, f}\in\Cal S_{X,f}^\perp$.  In fact,
 $$
-f = s_{X,f} + (\.f-s_{X, f}).
+f = s_{X,f} + (f-s_{X, f}).
 $$
 The orthogonality of the two components implies the {\em Pythagorean identity}, which says that
 $$
