--- a/thesis-mac.tex
+++ b/thesis-mac.tex
@@ -3,9 +3,7 @@
 \_medmuskip = 4mu plus 1mu minus 2mu % instead of 4 + 2 - 4
 \_thickmuskip = 5mu plus 2mu % instead of 5 + 5
 
-\newmuskip\_unitmuskip
-\_unitmuskip = 1mu
-\protected\def\.{\mskip\_unitmuskip}
+\protected\def\.{\mskip 1.5mu\relax}
 
 
 
