--- a/biblist.bib
+++ b/biblist.bib
@@ -47,4 +47,21 @@ abstract = {Meshfree approximation methods are a relatively new area of research
 
 
 
+@InProceedings{shaback_1999,
+author="Schaback, Robert",
+editor="Müller, Manfred W.
+and Buhmann, Martin D.
+and Mache, Detlef H.
+and Felten, Michael",
+title="Native Hilbert Spaces for Radial Basis Functions I",
+booktitle="New Developments in Approximation Theory",
+year="1999",
+publisher="BirkhÃ¤user Basel",
+address="Basel",
+pages="255--282",
+abstract="This contribution gives a partial survey over the native spaces associated to (not necessarily radial) basis functions. Starting from reproducing kernel Hilbert spaces and invariance properties, the general construction of native spaces is carried out for both the unconditionally and the conditionally positive definite case. The definitions of the latter are based on finitely supported functional only. Fourier or other transforms are not required. The dependence of native spaces on the domain is studied, and criteria for functions and functionals to be in the native space are given. Basic facts on optimal recovery, power functions, and error bounds are included.",
+isbn="978-3-0348-8696-3"
+}
+
+
 
