--- a/native-spaces.tex
+++ b/native-spaces.tex
@@ -146,8 +146,7 @@ $$
 $$
 \postskip 
 
-%%%%  Same result for a differentiable kernel!!!!!!
-
+\noindent An analogous result holds also for differentiability---a continuously differentiable kernel has a native space made of continuously differentiable functions (Shaback~\cite[shaback_1999]).
 
 On the native space~$\Cal N_Φ$ of a symmetric positive definite kernel~$Φ$ there are two notions of {\em convergence}.  One is the convergence in the norm of the space, the other is the pointwise convergence, since the elements of~$\Cal N_Φ$ are actual functions that can be evaluated at each point of their domain.  These two notions are related.
 \preskip
