--- a/thesis.tex
+++ b/thesis.tex
@@ -14,12 +14,13 @@
 
 \margins/1 a4 (100,95,130,145)pt
 \typosize[12.21/14.5]
+%\typosize[12/14.25]
 \parindent 1.5em
 \parskip 1.5ex
 \rulewidth 0.12ex
 
 
-%\tocpage
+\tocpage
 
 
 \sec The interpolation problem
