--- a/thesis.tex
+++ b/thesis.tex
@@ -6,7 +6,8 @@
 \outlines 1
 
 \enlang
-\fontfam[garamond]
+%\fontfam[garamond]
+\fontfam[garamondgeorgd] \setff{+calt} % +dlig
 \load[garamond-fix]
 %\OpTeX
 
@@ -55,7 +56,6 @@
 
 
 % manual tuning of parameter
-
 
 
 % BIBLIOGRAPHY
