--- a/thesis.tex
+++ b/thesis.tex
@@ -8,14 +8,14 @@
 \enlang
 %\fontfam[garamond]
 \fontfam[garamondgeorgd] \setff{+calt} % +dlig
-\load[garamond-fix]
+\load[garamond-fix, micro]
 %\OpTeX
 
 \def\QED{\Umathchar"0"01"00203B}
 
 \margins/1 a4 (100,95,130,145)pt
+
 \typosize[12.21/14.5]
-\load[micro]
 %\typosize[12/14.25]
 \parindent 1.5em
 \parskip 1.5ex
