--- a/error-estimates.tex
+++ b/error-estimates.tex
@@ -171,7 +171,7 @@ Starting from inequality~\ref[pow3] it is possible to derive an upper bound for 
 $$
 h_X = \sup_{x\in\Omega}\min_{x_j\in X}\norm{x-x_j}.
 $$
-If $\Omega$ is bounded and satisfies an interior cone condition\fnote{A domain~$\Omega\in\R^d$ satisfies an {\em interior cone condition} if there exists an angle~$\theta\in(0,\pi/2)$ and a radius~$r>0$ such that for every~$x\in\Omega$ there exists a unit vector~$\xi(x)$ such that the cone
+If $\Omega$ is bounded and satisfies an interior cone condition,\fnote{A domain~$\Omega\in\R^d$ satisfies an {\em interior cone condition} if there exists an angle~$\theta\in(0,\pi/2)$ and a radius~$r>0$ such that for every~$x\in\Omega$ there exists a unit vector~$\xi(x)$ such that the cone
 \vskip-\parskip
 \vskip-1.5ex
 $$
@@ -179,7 +179,7 @@ C = \{x+\lambda y:\, y\in\R^d,\, \norm y = 1,\, y^T\xi(x)\geq\cos\theta,\, \lamb
 $$
 \vskip-\parskip
 \vskip-1ex \noindent
-is contained in~$\Omega$.}, then 
+is contained in~$\Omega$.} then 
 $$
 P_X^2(x)\leq F(h_X) \quad \mathbox{for all $x\in\Omega$,}
 $$
