--- a/thesis-mac.tex
+++ b/thesis-mac.tex
@@ -41,8 +41,9 @@
 
 
 
+% Change size of footnote
+\def\_fnset{\_everypar={}\_scalemain \_typoscale[830/830]}
 
-\def\_printfnotemark {$^\mathbox{\_fnotenum}$}
 \_def\_thefnum {\_the\_fnum}
 \_def\_thetnum {\_the\_tnum}
 \_def \_secx {\_seccx \_seccnum=0}
