--- a/thesis.tex
+++ b/thesis.tex
@@ -44,7 +44,7 @@
 \input optimality
 
 % Monotonicity results
-\sec Adding data
+\sec[addingsec] Adding data
 \input adding-data
 
 %\sec shape parameter
