--- a/biblist.bib
+++ b/biblist.bib
@@ -1,12 +1,13 @@
 
 
+
 @book{wendland_2004,
 place={Cambridge},
 series={Cambridge Monographs on Applied and Computational Mathematics},
 title={Scattered Data Approximation},
 publisher={Cambridge University Press},
 author={Wendland, Holger}, 
-year={2004},
+year={\caps\currvar 2004\nocaps\currvar},
 collection={Cambridge Monographs on Applied and Computational Mathematics}
 }
 
@@ -14,35 +15,32 @@ collection={Cambridge Monographs on Applied and Computational Mathematics}
 @book{shaback_1997,
 title = {Reconstruction of multivariate functions from scattered data},
 author = {Schaback, Robert},
-year = {1997}
+year = {\caps\currvar 1997\nocaps\currvar}
 }
 
 @article{shaback_2006,
 author = {Schaback, Robert and  Werner, J.},
-year = {2006},
+year = {\caps\currvar 2006\nocaps\currvar},
 title = {Linearly constrained reconstruction of functions by kernels with applications to machine learning},
-journal = {Advances in Computational Mathematics},
-abstract = {This paper investigates the approximation of multivariate functions from data via linear combinations of translates of a positive definite kernel from a reproducing kernel Hilbert space. If standard interpolation conditions are relaxed by Chebyshev-type constraints, one can minimize the norm of the approximant in the Hilbert space under these constraints. By standard arguments of optimization theory, the solutions will take a simple form, based on the data related to the active constraints, called support vectors in the context of machine learning. The corresponding quadratic programming problems are investigated to some extent. Using monotonicity results concerning the Hilbert space norm, iterative techniques based on small quadratic subproblems on active sets are shown to be finite, even if they drop part of their previous information and even if they are used for infinite data, e.g., in the context of online learning. Numerical experiments confirm the theoretical results.}
+journal = {Advances in Computational Mathematics}
 }
 
 
 @book{fasshauer_2007,
 author = {Fasshauer, Gregory F},
 title = {Meshfree Approximation Methods with MATLAB},
-year = {2007},
+year = {\caps\currvar 2007\nocaps\currvar},
 publisher = {World Scientific Publishing Co., Inc.},
-address = {USA},
-abstract = {Meshfree approximation methods are a relatively new area of research, and there are only a few books covering it at present. Whereas other works focus almost entirely on theoretical aspects or applications in the engineering field, this book provides the salient theoretical results needed for a basic understanding of meshfree approximation methods. The emphasis here is on a hands-on approach that includes MATLAB routines for all basic operations. Meshfree approximation methods, such as radial basis function and moving least squares method, are discussed from a scattered data approximation and partial differential equations point of view. A good balance is supplied between the necessary theory and implementation in terms of many MATLAB programs, with examples and applications to illustrate key points. Used as class notes for graduate courses at Northwestern University, Illinois Institute of Technology, and Vanderbilt University, this book will appeal to both mathematics and engineering graduate students.}
+address = {USA}
 }
 
 
 
 @book{stein_2009,
- abstract = { Real Analysis is the third volume in the Princeton Lectures in Analysis, a series of four textbooks that aim to present, in an integrated manner, the core areas of analysis. Here the focus is on the development of measure and integration theory, differentiation and integration, Hilbert spaces, and Hausdorff measure and fractals. This book reflects the objective of the series as a whole: to make plain the organic unity that exists between the various parts of the subject, and to illustrate the wide applicability of ideas of analysis to other fields of mathematics and science.    After setting forth the basic facts of measure theory, Lebesgue integration, and differentiation on Euclidian spaces, the authors move to the elements of Hilbert space, via the L2 theory. They next present basic illustrations of these concepts from Fourier analysis, partial differential equations, and complex analysis. The final part of the book introduces the reader to the fascinating subject of fractional-dimensional sets, including Hausdorff measure, self-replicating sets, space-filling curves, and Besicovitch sets. Each chapter has a series of exercises, from the relatively easy to the more complex, that are tied directly to the text. A substantial number of hints encourage the reader to take on even the more challenging exercises.    As with the other volumes in the series, Real Analysis is accessible to students interested in such diverse disciplines as mathematics, physics, engineering, and finance, at both the undergraduate and graduate levels.    Also available, the first two volumes in the Princeton Lectures in Analysis:  },
  author = {Stein, Elias M. and Shakarchi, Rami},
  publisher = {Princeton University Press},
  title = {Real Analysis: Measure Theory, Integration, and Hilbert Spaces},
- year = {2005}
+ year = {\caps\currvar 2005\nocaps\currvar}
 }
 
 
@@ -55,12 +53,10 @@ and Mache, Detlef H.
 and Felten, Michael",
 title="Native Hilbert Spaces for Radial Basis Functions I",
 booktitle="New Developments in Approximation Theory",
-year="1999",
+year="\caps\currvar 1999\nocaps\currvar",
 publisher="BirkhÃ¤user Basel",
 address="Basel",
-pages="255--282",
-abstract="This contribution gives a partial survey over the native spaces associated to (not necessarily radial) basis functions. Starting from reproducing kernel Hilbert spaces and invariance properties, the general construction of native spaces is carried out for both the unconditionally and the conditionally positive definite case. The definitions of the latter are based on finitely supported functional only. Fourier or other transforms are not required. The dependence of native spaces on the domain is studied, and criteria for functions and functionals to be in the native space are given. Basic facts on optimal recovery, power functions, and error bounds are included.",
-isbn="978-3-0348-8696-3"
+pages="255--282"
 }
 
 
