--- a/native-spaces.tex
+++ b/native-spaces.tex
@@ -53,7 +53,7 @@ For each~$y\in\Omega$ the point-evaluation functional~$\delta_y: F_Φ\to\R$ is r
 $$
 \delta_y(f) = \form {Φ(\cdot,y)}f_Φ\mathbox{,\quad for each~$f\in F_Φ$.}\eqmark[repr]
 $$
-Moreover, these functionals belong the  {\em topological dual}\fnote{The topological dual of~$F_Φ$ is the set of all the linear functionals~$F_Φ\to\R$ that  continuous with respect to the topology induced by the norm~$\norm\;_Φ$.} $F_Φ^*$ of~$F_Φ$ and they are {\em linearly independent}. 
+Moreover, these functionals belong the  {\em topological dual\nobreak\,}\fnote{The topological dual of~$F_Φ$ is the set of all the linear functionals~$F_Φ\to\R$ that  continuous with respect to the topology induced by the norm~$\norm\;_Φ$.} $F_Φ^*$ of~$F_Φ$ and they are {\em linearly independent}. 
 
 
 \proof
