--- a/thesis-mac.tex
+++ b/thesis-mac.tex
@@ -5,6 +5,9 @@
 
 \protected\def\.{\mskip 1.5mu\relax}
 
+%\abovedisplayskip=.9\abovedisplayskip
+%\belowdisplayskip=.9\belowdisplayskip
+
 
 
 \def\theorem{\numberedpar A{\semibold\bf THEOREM}}
@@ -33,16 +36,17 @@
 \def\bnorm#1{\bigl\Vert #1\bigr\Vert}
 \def\Bnorm#1{\biggl\Vert #1\biggr\Vert}
 \def\opnorm#1{|\mskip-3.5mu|\mskip-3.5mu|#1|\mskip-3.5mu|\mskip-3.5mu|}
-\def\R{\BbbR}
-\def\N{\BbbN}
 \def\form#1#2{(\,#1\,,\,#2\,)}
 \def\bform#1#2{\bigl(\,#1\,,\,#2\,\bigr)}
 \def\Bform#1#2{\biggl(\,#1\,,\,#2\,\biggr)}
+\def\R{\BbbR}
+\def\N{\BbbN}
 
 
 
 % Change size of footnote
-\def\_fnset{\_everypar={}\_scalemain \_typoscale[830/830]}
+\def\_fnset{\_everypar={\kern-.66\parindent}\_scalemain \_typoscale[850/850]\applyfontextension \applyfontprotrusions}
+
 
 \_def\_thefnum {\_the\_fnum}
 \_def\_thetnum {\_the\_tnum}
@@ -67,3 +71,24 @@
 	\vfill\eject
 	\footline=\tmptoks}
 
+
+\_def\_printchap #1{\_vfill\_supereject
+   \_vglue\_medskipamount % shifted by topkip+\medskipamount
+   {\_chapfont \_noindent \_mtext{chap} \_printrefnum[@]\_par
+    \_nobreak\_smallskip
+    \_noindent \_raggedright \uppercase{#1}\_nbpar}\_mark{}%
+   \_nobreak \_belowtitle{\_bigskip}%
+   \_firstnoindent
+}
+\_def\_printsec#1{\_par
+   \_abovetitle{\_penalty-400}\_bigskip
+   {\_secfont \_noindent \_raggedright \_printrefnum[@\_quad]#1\_nbpar}\_insertmark{#1}%
+   \_nobreak \_belowtitle{\_medskip}%
+   \_firstnoindent
+}
+\_def\_printsecc#1{\_par
+   \_abovetitle{\_penalty-200}{\_medskip\_smallskip}
+   {\_seccfont \_noindent \_raggedright \_printrefnum[@\_quad]#1\_nbpar}%
+   \_nobreak \_belowtitle{\_medskip}%
+   \_firstnoindent
+}
