--- a/optimality.tex
+++ b/optimality.tex
@@ -33,7 +33,7 @@ $$
 $$ 
 
 
-Up to now we have considered as interpolant of the pair of data~$(X,f(X))$ only the  unique function~$s_{X,f}$ that belongs to~$\Cal S_{Φ,\. X}=\langle\,Φ(\cdot,x_j)\, :\, x_j\in X\,\rangle$.  Nonetheless, in the rest of~$\Cal N_Φ$ there are also other functions which agree with the values~$f(X)$ at the data sites~$X$---one trivial example is $f$ itself.  We are about to see a property satisfied by~$s_{X,f}$,  which makes it special among all the interpolants.
+Up to now we have considered as interpolant of the pair of data~$(X,f(X))$ only the  unique function~$s_{X,f}$ that belongs to~$\Cal S_{Φ,\. X}=\langle\,Φ(\cdot,x_j)\, :\, x_j\in X\,\rangle$.  Nonetheless, in the rest of~$\Cal N_Φ$ there are also other functions which agree with the values~$f(X)$ at the data sites~$X$---one trivial example is $f$ itself.  We are about to see a property satisfied by~$s_{X,f}\.$,  which makes it special among all the interpolants.
 
 
 We start by giving a name to the subspace of~$\Cal N_Φ$ made of all functions  that interpolates the pair of data~$(X, f(X))$, that is
