--- a/thesis.tex
+++ b/thesis.tex
@@ -8,19 +8,23 @@
 
 
 \enlang
-%\fontfam[garamond]
-\fontfam[garamondgeorgd] \setff{+calt} % +dlig
-\load[garamond-fix, micro]
+%\fontfam[garamondgeorgd] \setff{+calt} % +dlig
+\fontfam[BaskervilleMT]\load[patches]\let\semibold\bf %\let\bf\kf \let\bi\ki
+\load[garamond-math-fix, micro]
 %\OpTeX
 
 \def\QED{\Umathchar"0"01"00203B}
 
 \margins/1 a4 (100,95,130,145)pt
 
-\typosize[12.21/14.5]
+%\typosize[12.21/14.5]
+%\typosize[12/14.1818]
+\typosize[11.9/14.1]
 \parindent 1.5em
 \parskip 1.5ex
 \rulewidth 0.12ex
+
+\vbox{\hbox{461}\hbox{\bf 461}}
 
 \bgroup
 \let\_mtext\ignoreit
